--- a/dojo/html/englisch/vokabeltest/css/Quiz.css
+++ b/dojo/html/englisch/vokabeltest/css/Quiz.css
@@ -1,147 +1,248 @@
-
 @charset "UTF-8";
 
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
+/* Desktop-Stile (ab 601px) */
+@media screen and (min-width: 601px) {
+  .container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+  }
+
+  h1, h2, h3, h4, h5 {
+    font-size: 32px;
+    color: #0A3D62;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+  }
+
+  #question {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #2C3A47;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  input[type="text"] {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 12px;
+    font-size: 18px;
+    background-color: grey;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  input[type="text"]:hover {
+    background-color: black;
+  }
+
+  #answers button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 12px;
+    font-size: 18px;
+    background-color: #58B19F;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  #answers button:hover {
+    background-color: #3E8C85;
+  }
+
+  .question-highlight {
+    font-weight: bold;
+    color: #58B19F;
+    text-decoration: underline;
+   
+  }
+
+  .custom-select {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .custom-select select {
+    display: block;
+    width: 100%;
+    padding: 12px;
+    font-size: 18px;
+    background-color: #58B19F;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
+  .custom-select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 50%;
+
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: #fff;
+  }
+
+  .custom-select select:hover {
+    background-color: #3E8C85;
+  }
+
+  #vokabel-buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 Spalten */
+    gap: 15px; /* Abstand zwischen den Buttons */
+    justify-content: center; /* Zentriert das Grid */
+    max-width: 600px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  #vokabel-buttons button {
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #58B19F;
+    color: #fff;
+    border: none;
+    transition: background-color 0.3s ease;
+  }
+
+  #vokabel-buttons button:hover {
+    background-color: #3E8C85;
+  }
 }
 
+/* Smartphone-Stile (bis maximal 600px) */
+@media screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 20px; /* Vertikale Zentrierung */
+  }
 
+  h1, h2, h3, h4, h5 {
+    font-size: 5vw;
+    margin-bottom: 5vw;
+    color: #0A3D62;
+    text-transform: uppercase;
+  }
+
+  #question {
+    font-size: 4vw;
+    margin-bottom: 4vw;
+    color: #2C3A47;
+    font-weight: bold;
+  }
+
+  input[type="text"],
+  #answers button,
+  .custom-select select {
+    width: 90%;
+    max-width: 300px;
+    padding: 3vw;
+    font-size: 4vw;
+    border-radius: 6px;
+    background-color: #58B19F;
+    color: #fff;
+    transition: background-color 0.3s ease;
+  }
+
+  input[type="text"] {
+    margin-bottom: 3vw;
+  }
+
+  input[type="text"]:hover {
+    background-color: black;
+  }
+
+  #answers {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 3vw;
+  }
+
+  #answers button {
+    background-color: #58B19F;
+    font-size: 4vw;
+    flex-grow: 1;
+    margin-bottom: 0;
+    padding: 4vw;
+    color: white;
+    border: none;
+    border-radius: 6px;
+  }
+
+  #answers button:hover {
+    background-color: #3E8C85;
+  }
+
+  .custom-select {
+    width: 90%;
+    max-width: 300px;
+    margin-bottom: 3vw;
+    justify-self: center;
+    text-align: center;
+  }
+
+  .custom-select::after {
+    font-size: 4vw;
     
+  }
+
+  .custom-select select:hover {
+    background-color: #3E8C85;
+  }
+
+  #vokabel-buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 Spalten */
+    gap: 10px;
+    justify-content: center;
+    max-width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  #vokabel-buttons button {
+    font-size: 4vw;
+    padding: 3vw;
+    border-radius: 6px;
+    background-color: #58B19F;
+    color: #fff;
+    border: none;
+    transition: background-color 0.3s ease;
+  }
+
+  #vokabel-buttons button:hover {
+    background-color: #3E8C85;
+  }
+  .question-highlight {
+    font-weight: bold;
+    color: #58B19F;
+    text-decoration: underline;
     
-
-h1 {
-  font-size: 32px;
-  color: #0A3D62;
-  text-transform: uppercase;
-  margin-bottom: 30px;
+  }
 }
-
-h2 {
-  font-size: 25px;
-  color: #0A3D62;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-h3 {
-  font-size: 32px;
-  color: #d7002c;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-h4 {
-  font-size: 20px;
-  color: #ff000a;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-h5 {
-  font-size: 20px;
-  color: #131574;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-
-
-
-
-
-
-#question {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #2C3A47;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif; /* Hier die gewünschte Schriftart einfügen */
-}
-input[type="text"] {
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 12px;
-  font-size: 18px;
-  background-color: grey;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-input[type="text"]:hover {
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 12px;
-  font-size: 18px;
-  background-color: black;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-#answers button {
-  display: block;
-  width: 105%;
- 
-  margin-bottom: 10px;
-  padding: 12px;
-  font-size: 18px;
-  background-color: #58B19F;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-#answers button:hover {
-  background-color: #3E8C85;
-}
-
-/* Hervorhebung der Frage */
-.question-highlight {
-  font-weight: bold;
-  color: #58B19F;
-  text-decoration: underline;
-}
-.custom-select { position: relative; display: inline-block; width: 100%; /* Setzt die Breite auf 100% */
-margin-bottom: 10px; }
-
-.custom-select select {
-  display: block;
-  width: 100%;
-  padding: 12px;
-  font-size: 18px;
-  background-color: #58B19F;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  -webkit-appearance: none; /* Entfernt das Standard-Styling */
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.custom-select::after {
-  content: '\25BC'; /* Unicode-Zeichen für den Pfeil nach unten */
-  position: absolute;
-  top: 50%;
-  right: 12px;
-  transform: translateY(-50%);
-  font-size: 24px;
-  color: #fff;
-}
-
-.custom-select select:hover {
-  background-color: #3E8C85;
-}
-
-
